compiler/tests/should-fail/MalformedProtocolAnnotation3.via
/* MalformedProtocolAnnotationError */

host alice

fun main() {
    val x:int@Commitment(sender = alice, receivers = {alice}) = 5;
}
